unpackaged/main/default/objects/CompletenessReportSectionConfig__mdt/CompletenessReportSectionConfig__mdt.object-meta.xml
<CustomObject>
    <label>CompletenessReportSectionConfig</label>
    <pluralLabel>CompletenessReportSectionConfig</pluralLabel>
</CustomObject>