unpackaged/main/default/objects/CompletenessReportSectionConfig__mdt/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <description>This field values should be in sync with Prompt Information Object - Prompt Type field</description>
    <inlineHelpText>To get the respective prompt details in report</inlineHelpText>
    <label>App Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Builder</fullName>
                <default>true</default>
                <label>Asset Builder</label>
            </value>
            <value>
                <fullName>Interface Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>