unpackaged/main/default/objects/CompletenessReportSectionConfig__mdt/fields/Prompt_Type__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Type__c</fullName>
    <label>Prompt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wind - Onshore</fullName>
                <default>true</default>
                <label>Wind - Onshore</label>
            </value>
            <value>
                <fullName>MetMast</fullName>
            </value>
            <value>
                <fullName>SubstationSwitchgear</fullName>
            </value>
            <value>
                <fullName>Solar - PV</fullName>
            </value>
            <value>
                <fullName>Wind - Offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>