unpackaged/main/default/objects/CompletenessReportSectionConfig__mdt/fields/Report_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Report_Display_Order__c</fullName>
    <inlineHelpText>Report Section Display Order</inlineHelpText>
    <label>Report Section Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>