unpackaged/main/default/objects/CompletenessReportSectionConfig__mdt/fields/Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Label__c</fullName>
    <inlineHelpText>This field value is used as completeness report section label</inlineHelpText>
    <label>Section Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>