unpackaged/main/default/objects/CompletenessReportSectionConfig__mdt/fields/Summary_Report_First_Column_Label__c.field-meta.xml
<CustomField>
    <fullName>Summary_Report_First_Column_Label__c</fullName>
    <inlineHelpText>This field value will be used in completeness summary report first column label</inlineHelpText>
    <label>Summary Report First Column Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>